# cerebus

./: .gitignore  README.md  setup.cfg
cc2tools/cerebus/: localconfig.py  mod_xml.py  thumbnail.py  tool.py
cc2tools/cerebus/sdk/: utils.py
cc2tools/cerebus/sim/: altas_icons.py  cc2.py  vehicles.py
