[metadata]
name = cc2tools-cerebus
version = 0.1.1
description = Cookie-cutter and dev tools for Carrier Command 2 Mods
author = Ian Norton
author_email = inorton@gmail.com
license = License :: OSI Approved :: MIT License
long_description = Shortcut creating mods for Carrier Command 2.

[options]
platforms =
    any
packages =
    cc2tools.cerebus


python_requires = >= 3.10
install_requires =
    pyyaml
    pygame==2.6.0
    pillow==10.4.0
    lupa==2.2

[options.entry_points]
console_scripts =
    cc2-mod = cc2tools.cerebus.tool:run
